// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumb > filter React.Fragment 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Location
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      :
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > rtl render > component should be rendered correctly in RTL direction 1`] = `
<nav
  class="ant-breadcrumb ant-breadcrumb-rtl css-var-root"
>
  <ol />
</nav>
`;

exports[`Breadcrumb > should accept undefined items 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol />
</nav>
`;

exports[`Breadcrumb > should allow Breadcrumb.Item is null or undefined 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Home
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > should not display Breadcrumb Item when its children is falsy 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        xxx
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > should render correct 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <a
        class="ant-breadcrumb-link"
        href="#/"
      >
        <span>
          xxx
        </span>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > should support Breadcrumb.Item default separator 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Location
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <span>
      <li
        class="ant-breadcrumb-item"
      >
        <span
          class="ant-breadcrumb-link"
        >
          Mock Node
        </span>
      </li>
      <li
        aria-hidden="true"
        class="ant-breadcrumb-separator"
      >
        /
      </li>
    </span>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        Application Center
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > should support React.Fragment and falsy children 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    0
  </ol>
</nav>
`;

exports[`Breadcrumb > should support custom attribute 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
  data-custom="custom"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
        data-custom="custom-item"
      >
        xxx
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        yyy
      </span>
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumb > should support string \`0\` and number \`0\` 1`] = `
<nav
  class="ant-breadcrumb css-var-root"
>
  <ol>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        0
      </span>
    </li>
    <li
      aria-hidden="true"
      class="ant-breadcrumb-separator"
    >
      /
    </li>
    <li
      class="ant-breadcrumb-item"
    >
      <span
        class="ant-breadcrumb-link"
      >
        0
      </span>
    </li>
  </ol>
</nav>
`;
